--- a/package.json
+++ b/package.json
@@ -2,10 +2,26 @@
   "name": "wetube",
   "version": "1.0.0",
   "description": "cloaning youtube with Vanila and nodeJS",
-  "main": "index.js",
+  "main": "init.js",
   "author": "kwonseok Lee",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "@babel/core": "^7.3.4",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.4",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "helmet": "^3.15.1",
+    "mongoose": "^5.5.4",
+    "morgan": "^1.9.1",
+    "pug": "^2.0.3"
+  },
+  "scripts": {
+    "start": "nodemon --exec babel-node init.js "
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
