--- a/package.json
+++ b/package.json
@@ -17,12 +17,20 @@
     "mongoose": "^5.5.4",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node init.js "
+    "start": "nodemon --delay 2 --exec babel-node init.js "
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "nodemon": "^1.18.10",
+    "prettier": "^1.17.1"
   }
 }
