--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^9.5.1",
     "babel-loader": "^8.0.6",
     "body-parser": "^1.18.3",
+    "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.4",
     "css-loader": "^2.1.1",
     "dotenv": "^7.0.0",
