--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.3.4",
     "autoprefixer": "^9.5.1",
+    "aws-sdk": "^2.499.0",
+    "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "body-parser": "^1.18.3",
     "connect-mongo": "^3.0.0",
@@ -24,6 +26,7 @@
     "mongoose": "^5.5.4",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "node-sass": "^4.12.0",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
